--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "C_Cpp.default.compilerPath": "C:\\MinGW\\bin\\gcc.exe",
     "files.associations": {
-        "AULA6.C": "cpp"
+        "AULA6.C": "cpp",
+        "math.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
