--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "C_Cpp.default.compilerPath": "C:\\MinGW\\bin\\gcc.exe",
     "files.associations": {
         "AULA6.C": "cpp",
-        "math.h": "c"
+        "math.h": "c",
+        "biblioteca.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
